[project]
name = "bit_file_analysis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sneakers-the-rat", email = "sneakers-the-rat@protonmail.com"},
]
dependencies = ["bitstring>=4.3.0", "numpy>=2.2.3", "matplotlib>=3.10.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
